; ModuleID = '/home/carl/AnghaBench/ios-webkit-debug-proxy/src/extr_rpc.c_rpc_recv_plist.c'
source_filename = "/home/carl/AnghaBench/ios-webkit-debug-proxy/src/extr_rpc.c_rpc_recv_plist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"__selector\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"__argument\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rpc_recv_plist(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i8* null, i8** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @plist_dict_get_item(i32 %7, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %9 = call i32 @plist_get_string_val(i32 %8, i8** %5)
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @plist_dict_get_item(i32 %10, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @rpc_recv_msg(i32 %12, i8* %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @plist_get_string_val(i32, i8**) #1

declare dso_local i32 @plist_dict_get_item(i32, i8*) #1

declare dso_local i32 @rpc_recv_msg(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
